<resources>
    <string name="app_name">Taxo</string>
    <string name="start_address">Звідки</string>
    <string name="destination_address">Куди</string>
    <string name="order">Замовити</string>
    <string name="target_location">Визначити адресу відправлення</string>
    <string name="cost_values">0 грн</string>
    <string name="plus_5_uah">+5 грн</string>
    <string name="additional_comment">Додатковий коментар</string>
    <string name="order_information">Інформація про замовлення:</string>
    <string name="waiting_for_accept_order">Пошук водія…</string>
    <string name="cost_of_travel">Вартість поїздки:</string>
    <string name="driver_name">Ім\'я водія:</string>
    <string name="driver_phone_number">Номер телефону:</string>
    <string name="car_brand">Марка автомобіля:</string>
    <string name="car_color">Колір:</string>
    <string name="car_number">Державний номер:</string>
    <string name="add_address">Додати точку маршруту</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="your_location">Ви знаходитесь тут</string>
    <string name="waiting_for_car">Ваше замовлення прийняте, очікуйте</string>
    <string name="car_ready">Водій вже прибув до Вас</string>
    <string name="markers_start_label">Початок руху</string>
    <string name="markers_end_label">Точка призначення</string>
    <string name="markers_driver_position">Водій</string>
    <string name="dialog_order_completed_title">Замовлення виконано</string>
    <string name="dialog_order_completed_message">Дякуємо, що скористалися нашим сервісом! Вдалого Вам дня!</string>
    <string name="close">Закрити програму</string>
    <string name="new_order">Сворити нове замовлення</string>
    <string name="network_down_snackbar_text">Відсутнє з\'єднання з Інтернетом</string>
    <string name="action_open_wifi">Відкрити налаштування Wi-Fi</string>
    <string name="label_order_status">Статус замовлення:</string>
    <string name="alert_dialog_title">Попередження</string>
    <string name="alert_dialog_message">Водій ще не знайшовся. Відмінити замовлення?</string>
    <string name="button_yes">Так</string>
    <string name="button_no">Ні</string>
</resources>
