<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details_activity_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/information"
        app:cameraZoom="13"
        app:cameraTargetLat="49.441153"
        app:cameraTargetLng="32.064271"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/information"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:text="@string/label_order_status"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:text="@string/cost_of_travel"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/driver_name"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/driver_phone_number"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/car_brand"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/car_color"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/car_number"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:text="@string/waiting_for_accept_order"
                android:id="@+id/order_status"
                android:textStyle="bold"
                style="@style/text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="0 грн"
                android:layout_marginBottom="4dp"
                android:id="@+id/price_total"
                style="@style/text_style"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Василь"
                android:layout_marginBottom="4dp"
                android:id="@+id/driver_name"
                style="@style/text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="093-909-43-36"
                android:layout_marginBottom="4dp"
                android:id="@+id/driver_phone_number"
                style="@style/text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Ford"
                android:layout_marginBottom="4dp"
                android:id="@+id/car_model"
                style="@style/text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Синій"
                android:layout_marginBottom="4dp"
                android:id="@+id/car_color"
                style="@style/text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="СА 2345 СВ"
                android:id="@+id/car_number"
                style="@style/text_style"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>