<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ck.taxoteam.taxoclient.activity.MainActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_layout"
        app:cameraZoom="13"
        app:cameraTargetLat="49.441153"
        app:cameraTargetLng="32.064271"/>

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/target_location"
                android:textSize="16sp"
                style="@style/text_style"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gps_fixed"
                android:id="@+id/get_my_location"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:scrollbars="vertical"
            android:id="@+id/recycler_view_address"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cost_values"
                style="@style/text_style"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:id="@+id/total"/>

            <Button
                android:layout_width="60dp"
                android:layout_height="36dp"
                android:text="@string/plus_5_uah"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:textAppearance="?android:textAppearanceSmall"
                android:id="@+id/button_plus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/additional_comment"
                android:textAppearance="?android:textAppearanceSmall"
                style="@style/text_style"
                android:layout_weight="1"
                android:gravity="start"
                android:id="@+id/additionalComment"
                 />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:id="@+id/order"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
